allow for sending a message without the delay applied, from the long click menu on the send button

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -196,6 +196,7 @@
     <string name="send_as_scheduled_message_question">Would you like to schedule this message for later?</string>
     <string name="send_as_scheduled_message">Send as scheduled message</string>
     <string name="send_without_signature">Send without signature</string>
+    <string name="send_without_delay">Send without delay</string>
 
     <!-- Templates -->
     <string name="type_template_text">Type template text…</string>
