--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -374,8 +374,8 @@
     <string name="vibrate_one_long_one_short_one_long">One long, one short, one long vibration</string>
     <string name="keyboard_layout">Keyboard Layout</string>
     <string name="keyboard_default">Default Keyboard</string>
-    <string name="keyboard_send_key">Send Key</string>
-    <string name="keyboard_enter_key">Enter Key</string>
+    <string name="keyboard_send_key">Display a Send Key</string>
+    <string name="keyboard_enter_key">Display an Enter/Return Key</string>
     <string name="sound_effects">Sound Effects</string>
     <string name="delivery_reports">Delivery Reports</string>
     <string name="delivery_reports_summary">Most carriers do not support this option. It is not RCS</string>
