add smart reply action option to the notification. It is not yet querying firebase mlkit for the replies

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -264,6 +264,7 @@
     <string name="notification_action_call">Call Contact</string>
     <string name="notification_action_delete">Delete Message</string>
     <string name="notification_action_archive">Archive Conversation</string>
+    <string name="notification_action_smart_reply">Suggest Smart Reply</string>
     <string-array name="reply_choices">
         <item>Yes</item>
         <item>No</item>
