--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -544,6 +544,8 @@
     <string name="secure_private_conversations_summary">Setting a password will require you to enter it, before viewing private conversations</string>
     <string name="use_internal_browser">Use Internal Web Browser</string>
     <string name="internal_browser_summary">Turning this off will also disable link previews within message lists</string>
+    <string name="use_smart_replies">Suggest Smart Replies</string>
+    <string name="use_smart_replies_summary">Pulse will attempt to suggest relevant replies, within your conversations</string>
     <string name="message_backup">Message Backup</string>
     <string name="message_backup_pref_summary">Worried about losing your messages? Pulse has you covered</string>
     <string name="message_backup_summary">Did you know: Pulse\'s online service is built around backing up your
