move the smart replies into the send bar, and provide a button to close the smart reply options.
the first time that the user hits that button, they are presented with a dialog that can redirect them to settings, if they choose to turn it off

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -546,6 +546,8 @@
     <string name="internal_browser_summary">Turning this off will also disable link previews within message lists</string>
     <string name="use_smart_replies">Suggest Smart Replies</string>
     <string name="use_smart_replies_summary">Pulse will suggest relevant replies, when available. These are generated directly on the device, not a remote server</string>
+    <string name="use_smart_replies_dialog">Pulse will suggest relevant replies, when available. These are generated directly on the device, not a remote server.\n\nIf you would rather not use this feature, it can be disabled, from settings.</string>
+    <string name="use_smart_reply_settings">Settings</string>
     <string name="message_backup">Message Backup</string>
     <string name="message_backup_pref_summary">Worried about losing your messages? Pulse has you covered</string>
     <string name="message_backup_summary">Did you know: Pulse\'s online service is built around backing up your
