--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="menu_archive_conversation">Archive conversation</string>
     <string name="menu_move_to_inbox">Move to inbox</string>
     <string name="menu_conversation_information">Conversation information</string>
+    <string name="menu_search_conversation">Search conversation</string>
     <string name="menu_copy_phone_number">Copy number</string>
     <string name="menu_view_full_conversation">View History</string>
     <string name="menu_conversation_blacklist">Blacklist contact</string>
