--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -586,6 +586,7 @@
 
     <!-- Theming Options -->
     <string name="day_night">Default (Day/Night)</string>
+    <string name="system_default">System Default</string>
     <string name="always_light">Always Light</string>
     <string name="always_dark">Always Dark</string>
     <string name="always_black">Always Black</string>
