--- a/shared/src/main/res/values-tr/strings.xml
+++ b/shared/src/main/res/values-tr/strings.xml
@@ -14,7 +14,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">Pulse</string>
     <string name="app_name_long">Pulse (SMS/Tablet Messenger)</string>
     <string name="app_title">Pulse</string>
@@ -115,6 +115,7 @@ http://messenger.klinkerapps.com</string>
     <string name="type_message_to">%1$s adlı kişiye mesaj yaz</string>
     <string name="attach">Ekle</string>
     <string name="select_sim">SIM\'i seçin</string>
+    <string name="view_scheduled_messages">Sohbet için zamanlanmış mesajları gör</string>
     <string name="message_from">%1$s</string>
     <string name="message_from_bullet">%1$s •</string>
     <string name="mms_image">MMS Resmi</string>
@@ -125,6 +126,7 @@ http://messenger.klinkerapps.com</string>
     <string name="attach_image">Resim Ekle</string>
     <string name="capture_image">Resim Yakala</string>
     <string name="attach_gif">GIF Ekle</string>
+    <string name="attach_sticker">Çıkartma Ekle</string>
     <string name="record_video">Video Kaydet</string>
     <string name="record_audio">Ses Kaydet</string>
     <string name="attach_location">Konum Ekle</string>
@@ -139,6 +141,7 @@ resimleri!</string>
     <string name="fullscreen">Tam ekran</string>
     <string name="attached_image">Ekli Resim</string>
     <string name="remove_image">Ekli Resmi Kaldır</string>
+    <string name="remove_image_short">Remi kaldır</string>
     <string name="edit_image">Eklenmiş Resmi Düzenle</string>
     <string name="edit_recipients">Alıcıları Düzenle</string>
     <string name="select_folder">Sohbet için Klasör Seçin</string>
@@ -155,6 +158,9 @@ hadi başlatın!</string>
     <string name="audio_recording_error">Kayıt hatası :(</string>
     <string name="message_copied_to_clipboard">Panoya kopyalandı</string>
     <string name="view_details">Ayrıntıları Göster</string>
+    <string name="speak_message">Mesajı Sesli Oku</string>
+    <string name="select_all_messages">Tüm Mesajları Seç</string>
+    <string name="select_all_conversations">Tüm Sohbetleri Seç</string>
     <string name="delete">Sil</string>
     <string name="copy_message">Metni Kopyala</string>
     <string name="resend">Yeniden Gönder</string>
@@ -174,10 +180,16 @@ hadi başlatın!</string>
     <string name="copy_link">Linki kopyala</string>
     <string name="attach_vcard">Kişiyi vCard olarak Ekle</string>
     <string name="attach_plain_text">Kişiyi Düz Metin olarak Ekle</string>
+    <string name="send_as_scheduled_message_question">Bu mesajın, ileri tarihli gönderilmesini ister misiniz?</string>
+    <string name="send_as_scheduled_message">Zamanlanmış mesaj olarak gönder</string>
+    <string name="send_without_signature">İmzasız gönder</string>
+    <string name="send_without_delay">Gecikmeden gönder</string>
     <!-- Templates -->
     <string name="type_template_text">Şablon metnini yaz</string>
     <string name="delete_template">Bu şablonu silmek istediğinize emin misiniz?</string>
+    <string name="edit_or_delete_template">Bu şablonu düzenlemek veya silmek ister misiniz?</string>
     <string name="no_templates">Bir şablon oluşturmak için <b>+</b> düğmesini kullanın</string>
+    <string name="edit">Düzenle</string>
     <!-- Compose Screen -->
     <string name="compose_message">Yeni mesaj oluştur</string>
     <string name="send_message">Mesaj gönder</string>
@@ -189,10 +201,11 @@ hadi başlatın!</string>
     <string name="compose_all_contacts">Tüm Kişiler</string>
     <string name="private_conversation_disclaimer">Bu bir <b>özel sohbet</b> ve mesaj yazma ekranından açılamaz.</string>
     <!-- Onboarding Screen -->
+    <string name="google_requires_default_sms">Google, bir SMS uygulamasının, herhangi bir mesaja erişmeden veya herhangi bir mesaj göndermeden önce, varsayılan mesajlaşma uygulaması olarak atanmasını istiyor. Bu izin gereklidir.</string>
+    <string name="google_requires_default_sms_policy">Politikayı Görün</string>
     <string name="permissions_needed">Uygulama, bu izinler olmadan çalışamaz! Devam etmeden önce onları kabul etmeniz gerekiyor.</string>
     <string name="loading_messages">Optimize ediliyor...</string>
-    <string name="loading_messages_summary">Mesajlarınızı uygulamaya almaya çalışıyorum.
-Uzun sürmeyecek!</string>
+    <string name="loading_messages_summary">Mesajlarınızı uygulamaya alıyoruz. Uzun sürmeyecek!</string>
     <string name="tooltip_got_it">Anladım!</string>
     <string name="navigation_drawer_conversation_hint">Bu sohbet için daha fazla seçenek gezinti menüsünde bulunur.</string>
     <string name="onboarding_title_1">Yeniden hayal edilen mesajlaşma</string>
@@ -369,9 +382,15 @@ Uzun sürmeyecek!</string>
     <string name="right_to_left_swipe">Sağdan-Sola Kaydır</string>
     <string name="no_swipe">Kaydırmayı kapat</string>
     <string name="blacklist_hint">Kara listeye alınacak numarayı yazın...</string>
+    <string name="enter_phrase">İfade Girin</string>
+    <string name="enter_phone">Telefon Numarası Girin</string>
+    <string name="blacklist_phrase_hint">Kara listeye alınacak ifadeyi yazın...</string>
     <string name="add_blacklist">%1$s\n\nBunu kara listeye almak istediğinize emin misiniz? Artık bu numaradan gelen mesajlar kaydedilmeyecek ve bildirim almayacaksınız!</string>
+    <string name="add_blacklist_phrase">%1$s\n\nBunu kara listeye almak istediğinize emin misiniz? Artık 
+bu ifadeyi içeren mesajlar kaydedilmeyecek ve bildirim almayacaksınız!</string>
     <string name="remove_blacklist">%1$s\n\nBunu kara listeden silmek istiyor musun?</string>
     <string name="blacklist_need_number">Kara listeye alınacak bir telefon numarası girmeniz gerekiyor!</string>
+    <string name="blacklist_need_phrase">Kara listeye alınacak bir ifade girmeniz gerekiyor!</string>
     <string name="no_blacklists">Kara liste boş</string>
     <string name="no_blacklists_summary">Aşağıdaki artı düğmesini kullanarak ekleyebilirsiniz!</string>
     <string name="add">Ekle</string>
@@ -444,6 +463,7 @@ Hesabınız kaldırılacak ve sizden ödeme alınmayacak. Uygulamayı ücretsiz 
     <string name="settings_phone_number">Telefon Numarası</string>
     <string name="disable_battery_optimization">Pil Optimizasyonunu Kapat</string>
     <string name="disable_battery_optimization_summary">Mesajlar telefonunuzdan web\'e ulaşmıyorsa, Pulse için pil optimizasyonlarını devre dışı bırakmayı deneyin.</string>
+    <string name="hex">Hex Rengi</string>
     <!-- MMS Configuration Settings -->
     <string name="max_mms_size">Maksimum Görüntü Boyutu</string>
     <string name="max_mms_size_summary">Taşıyıcınızın izin verdiğinden daha yüksek belirlemeyin</string>
@@ -524,12 +544,21 @@ Alıcı %1$s?</string>
     <string name="no_scheduled_messages">Zamanlanmış mesaj yok</string>
     <string name="no_scheduled_messages_summary">Aşağıdaki artı düğmesini kullanarak oluşturabilirsiniz!</string>
     <string name="scheduled_message_in_future">Zaman ileri tarihli olmalı!</string>
+    <string name="scheduled_repeat_never">Tekrarlama</string>
+    <string name="scheduled_repeat_daily">Günlük tekrarla</string>
+    <string name="scheduled_repeat_weekly">Haftalık tekrarla</string>
+    <string name="scheduled_repeat_monthly">Aylık tekrarla</string>
+    <string name="scheduled_repeat_yearly">Yıllık tekrarla</string>
+    <string name="remove_scheduled_message">Bu zamanlanmış mesajı silmek istediğinize emin misiniz?</string>
+    <string name="select_image">Telefondan Resim Seç</string>
+    <string name="select_gif">GIF ara</string>
+    <string name="media_on_primary_device">Zamanlanmış bir mesaj içindeki medya, sadece telefon uygulamasında görülebilir.</string>
     <!-- Encryption -->
     <string name="encrypting_and_uploading">Şifreleniyor ve yükleniyor...</string>
     <string name="encrypting_and_uploading_media">Medya mesajlarını şifreleniyor ve sıkıştırılıyor...</string>
     <string name="encrypting_and_uploading_count">Medya mesajları şifreleniyor ve sıkıştırılıyor... (%1$d/%2$d)</string>
     <string name="downloading_and_decrypting">İndirme ve şifre çözme ...</string>
-    <string name="decrypting_and_downloading_media">Medya indiriliyor ve şifresini çözüyor ...</string>
+    <string name="decrypting_and_downloading_media">Medya indiriliyor ve şifresi çözülüyor...</string>
     <!-- Quick Reply -->
     <string name="audio_message">Sesli Mesaj</string>
     <string name="video_message">Video Mesajı</string>
