make option to 'pop-out to bubble' within any conversation

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="menu_snooze">Snooze notifications</string>
     <string name="menu_call">Call contact</string>
     <string name="menu_video_call">Video call with Duo</string>
+    <string name="menu_show_bubble">Pop-out to Bubble</string>
     <string name="menu_view_contact">View contact</string>
     <string name="menu_view_contacts">View contacts</string>
     <string name="menu_view_media">View media</string>
